--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "private": true,
   "scripts": {
-    "build": "xsuite build",
-    "test": "node --loader tsx --test **/*.test.ts",
+    "build": "npm run build:feeds && npm run build:bank:static:local && npm run build:bank",
+    "build:feeds": "cd umbrella-feeds && mxpy contract build",
+    "build:bank:static:local": "cd staking-bank-static/staking-bank-static-local && mxpy contract build",
+    "build:bank": "cd staking-bank && mxpy contract build",
+    "test": "vitest run",
     "deploy": "tsx interactions/deploy.ts",
+    "interactions": "tsx interactions/${npm_config_name}.ts",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@multiversx/sdk-core": "^12.5.0",
+    "@multiversx/sdk-network-providers": "^1.5.0",
+    "@multiversx/sdk-wallet": "^4.2.0",
     "@types/node": "^18.16.18",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
-    "xsuite": "0.0.25",
-    "@multiversx/sdk-core": "^12.4.3",
-    "@multiversx/sdk-wallet": "^4.2.0"
+    "vitest": "^0.33.0",
+    "xsuite": "0.0.25"
   }
 }
