--- a/staking-bank-static/staking-bank-static-prod/Cargo.toml
+++ b/staking-bank-static/staking-bank-static-prod/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "staking-bank"
+name = "staking-bank-static-prod"
 version = "0.0.0"
 authors = [ "you",]
 edition = "2018"
@@ -16,7 +16,7 @@ features = ["esdt-token-payment-legacy-decode"]
 version = "=0.41.3"
 
 [dependencies.staking-bank-module]
-path = "../common/modules/staking-bank-module"
+path = "../../common/modules/staking-bank-module"
 
 [dev-dependencies.multiversx-sc-scenario]
 version = "0.41.3"
