--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "scripts": {
     "build": "npm run build:feeds && npm run build:bank:static:local && npm run build:registry",
     "build:all": "npm run build:feeds && npm run build:bank:static:local && npm run build:bank:static:dev && npm run build:bank:static:prod && npm run build:registry",
-    "build:feeds": "cd umbrella-feeds && mxpy contract build",
-    "build:bank:static:local": "cd staking-bank-static/staking-bank-static-local && mxpy contract build",
-    "build:bank:static:dev": "cd staking-bank-static/staking-bank-static-dev && mxpy contract build",
-    "build:bank:static:prod": "cd staking-bank-static/staking-bank-static-prod && mxpy contract build",
-    "build:registry": "cd registry && mxpy contract build",
+    "build:feeds": "cd umbrella-feeds && xsuite build",
+    "build:bank:static:local": "cd staking-bank-static/staking-bank-static-local && xsuite build",
+    "build:bank:static:dev": "cd staking-bank-static/staking-bank-static-dev && xsuite build",
+    "build:bank:static:prod": "cd staking-bank-static/staking-bank-static-prod && xsuite build",
+    "build:registry": "cd registry && xsuite build",
     "test": "vitest run",
-    "test:contract": "cd umbrella-feeds && cargo test",
-    "test:scenarios": "cd umbrella-feeds && mxpy contract test",
+    "test:contract": "cd umbrella-feeds && xsuite test-rust",
+    "test:scenarios": "cd umbrella-feeds && xsuite test-scen",
     "test:all": "npm run build && npm run test:scenarios && npm run test && npm run test:contract",
     "typecheck": "tsc --noEmit",
     "interact:devnet": "CHAIN=devnet tsx interact/index.ts",
@@ -26,6 +26,7 @@
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "vitest": "^0.33.0",
-    "xsuite": "0.0.27"
+    "xsuite": "0.0.27",
+    "xsuite-cli": "0.0.14"
   }
 }
